--- a/client/package.json
+++ b/client/package.json
@@ -3,12 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/date-fns": "^1.3.13",
     "@material-ui/core": "^4.12.2",
     "@material-ui/lab": "^4.0.0-alpha.60",
+    "@material-ui/pickers": "^3.3.10",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
+    "moment": "^2.29.1",
+    "rc-picker": "^2.5.14",
+    "rc-time-picker": "^3.7.3",
     "react": "^17.0.2",
     "react-date-range": "^1.3.0",
     "react-dom": "^17.0.2",
