--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "rc-picker": "^2.5.14",
     "rc-time-picker": "^3.7.3",
     "react": "^17.0.2",
+    "react-date-picker": "^8.3.2",
     "react-date-range": "^1.3.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
